Source/WebKit2/UIProcess/ProcessAssertion.cpp
@@ -35,6 +35,10 @@ ProcessAssertion::ProcessAssertion(pid_t, AssertionState assertionState)
     m_assertionState = assertionState;
 }
 
+ProcessAssertion::~ProcessAssertion()
+{
+}
+
 void ProcessAssertion::setState(AssertionState assertionState)
 {
     if (m_assertionState == assertionState)
